--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,7 +21,7 @@
     
     <!-- 基本元數據 -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="SABIT 本地加密貨幣自動化交易工具，安全、高效、易用" />
+    <meta name="description" content="SABIT加密貨幣自動化交易工具，安全、高效、易用" />
     <title>SABIT | 加密貨幣自動化交易</title>
   </head>
   <body>
