--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,6 +15,11 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/logo/png_192.png" />
     <link rel="apple-touch-icon" sizes="167x167" href="/logo/png_192.png" />
     
+    <!-- 字體引入 -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500;600;700&family=Noto+Serif+TC:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500;600&family=Source+Code+Pro:wght@400;500;600&display=swap" rel="stylesheet">
+    
     <!-- PWA 相關設置 -->
     <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="#000000" />
